lib/NodeExploitSynthesis/tests/toy_example/structured-constraint/analysis.out
tsc -b
node --trace-uncaught --stack-trace-limit=20 lib/jalangi2-babel/src/js/commands/jalangi.js --analysis src/rewrite.js ../NodeExploitSynthesis/tests/toy_example/structured-constraint/driver.js log_level=warn policies=object:precise,string:precise,array:precise taint_paths=true taint_paths_json=true honeyobjects=true assert_passed=false eval_sink=
Browserslist: caniuse-lite is outdated. Please run:
npx browserslist@latest --update-db

Why you should do it regularly:
https://github.com/browserslist/browserslist#browsers-data-updating
/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:515
            throw tmp;
            ^

Error: Sink function exec(command, options, callback) {
  const opts = normalizeExecArgs(command, options, callback);
  return module.exports.execFile(opts.file,
                                 opts.options,
                                 opts.callback);
} reached with tainted arguments {"0":{"0":"g","1":"r","2":"e","3":"p","4":" ","5":"f","6":"u","7":"n","8":"c","9":"t","10":"i","11":"o","12":"n","13":" ","14":"(","15":")","16":" ","17":"{","18":" ","19":"r","20":"e","21":"t","22":"u","23":"r","24":"n","25":" ","26":"b","27":"a","28":"s","29":"e","30":"P","31":";","32":" ","33":"}"}}

    at /Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/src/Taint.js:390:23
    at Array.forEach (<anonymous>)
    at hitFuncSink (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/src/Taint.js:382:23)
    at TCallPre (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/src/Taint.js:351:12)
    at Instrumentation.invokeFunPre (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/src/Base.js:147:60)
    at MyAnalysis.invokeFunPre (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/src/rewrite.js:38:43)
    at invokeFun (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:208:37)
    at /Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:233:41
    at grep (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitSynthesis/tests/toy_example/structured-constraint/driver.js:15:80)
    at callFun (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:196:51)
    at invokeFun (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:217:22)
    at /Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:233:41
    at Object.<anonymous> (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitSynthesis/tests/toy_example/structured-constraint/driver.js:32:64)
    at Module._compile (node:internal/modules/cjs/loader:1108:14)
    at Object.Module._extensions..js (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/commands/jalangi.js:109:12)
    at Module.load (node:internal/modules/cjs/loader:973:32)
    at Function.Module._load (node:internal/modules/cjs/loader:813:14)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:76:12)
    at startProgram (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/commands/jalangi.js:121:19)
    at MyAnalysis.onReady (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/src/rewrite.js:161:13)
    at Object.<anonymous> (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/commands/jalangi.js:125:17)
    at Module._compile (node:internal/modules/cjs/loader:1108:14)
    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1137:10)
    at Module.load (node:internal/modules/cjs/loader:973:32)
    at Function.Module._load (node:internal/modules/cjs/loader:813:14)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:76:12)
    at node:internal/main/run_main_module:17:47
Thrown at:
    at /Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/src/Taint.js:390:23
    at hitFuncSink (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/src/Taint.js:382:23)
    at TCallPre (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/src/Taint.js:351:12)
    at Instrumentation.invokeFunPre (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/src/Base.js:147:60)
    at MyAnalysis.invokeFunPre (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/src/rewrite.js:38:43)
    at invokeFun (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:208:37)
    at /Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:233:41
    at grep (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitSynthesis/tests/toy_example/structured-constraint/driver.js:15:80)
    at callFun (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:196:51)
    at invokeFun (/Users/darion/projects/javascript-analysis/ExploitSynthesis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:217:22)
make: *** [analyze] Error 1
